CATS-1372: once transfer requisition plan is done, requisition number is now editable

--- a/Web/Areas/Logistics/Views/DispatchAllocation/Index.cshtml
+++ b/Web/Areas/Logistics/Views/DispatchAllocation/Index.cshtml
@@ -12,6 +12,10 @@
     ViewBag.PageTitleDescription = "";
 }
 
+<div id='dialogDiv' class='modal fade bs-modal-lg'>
+    <div id='dialogContent'></div>
+</div>
+
 <div class="portlet light bordered">
     <div class="portlet-title">
         <div class="caption font-green-sharp">
@@ -32,7 +36,6 @@
                     </button>
                 }
                 <ul class="dropdown-menu pull-right">
-                                       
                    
                     
 
