CATS-1372: modal window has got minor changes

--- a/Web/Areas/Logistics/Views/DispatchAllocation/UpdateRequisition.cshtml
+++ b/Web/Areas/Logistics/Views/DispatchAllocation/UpdateRequisition.cshtml
@@ -30,7 +30,7 @@
             </div>
         @*}*@
 
-        <div><span id="resultMessage"></span></div>
+        <div class="alert alert-danger"><span id="resultMessage"></span></div>
 
         <div class="modal-footer">
             <input class="btn green" type="submit" id="updateRequisition" value="Save" />
