--- a/Web/Areas/Regional/Views/Home/Index.cshtml
+++ b/Web/Areas/Regional/Views/Home/Index.cshtml
@@ -136,6 +136,7 @@
                                             <th>Start Date</th>
                                             <th>End Date</th>
                                             <th>Status</th>
+                                            <th>Is HRD Created </th>
                                             @*<th class="number">Amount(QT)</th>
                                                 <th>Status</th>
                                                 <th>Detail</th>*@
@@ -150,6 +151,7 @@
                                             <td>{{assessment.StartDate}} </td>
                                             <td>{{assessment.EndDate}} </td>
                                             <td><span class="label label-success">{{assessment.StatusDescription}}</span></td>
+                                            <td><span class="label label-success">{{assessment.IsHRDCreated}}</span></td>
 
                                         </tr>
                                     </tbody>
