CATS-1242: minor updates

--- a/Web/Areas/Logistics/Views/Donation/addNewDonation.cshtml
+++ b/Web/Areas/Logistics/Views/Donation/addNewDonation.cshtml
@@ -32,7 +32,7 @@
 
 
             <table border="0" class="form-horizontal ">
-                <tr style="width: 300px">
+                @*<tr style="width: 300px">
                     <td style="width:50%; padding-bottom: 10px; padding-top:10px;">
 
                         <div class="control-label">
@@ -43,7 +43,7 @@
                             <span class="help-block">@Html.ValidationMessageFor(m => m.GiftCertificateID)</span>
                         </div>
                     </td>
-                </tr>
+                </tr>*@
                 <tr style="width: 300px">
 
 
