--- a/Web/Areas/EarlyWarning/Views/NeedAssessment/_NeedAssessmentLeftBar.cshtml
+++ b/Web/Areas/EarlyWarning/Views/NeedAssessment/_NeedAssessmentLeftBar.cshtml
@@ -1,14 +1,20 @@
 ﻿@using System.Collections
-<ul class="nav nav-list">
-    <li class="nav-header">@ViewData["RegionName"]</li>
-    <li class="divider"></li>
-    @foreach (var item in ViewBag.Zones)
-    {
-        int id = @item.AdminUnitID;
-        <li><a href="#@item.Name" OnClicks="zoneChange(@id);">@item.Name </a></li>
-    }
-<!--
-    <li class="divider"></li>
-    <li><a href="#" onclick="zoneChange('');">Show All Zones </a></li>
--->
-</ul>
+
+@using Cats.Helpers
+@using Cats.Models.Constant
+
+<div class="portlet box" style="background-color: #2b3643;">
+    <div class="portlet-title line">
+        <div class="caption">
+             @ViewData["RegionName"]
+        </div>
+    </div>
+
+    <div class="portlet-body" style="padding: 0px;">
+        @foreach (var item in ViewBag.Zones)
+        {
+            int id = @item.AdminUnitID;
+            <li><a href="#@item.Name" OnClicks="zoneChange(@id);">@item.Name </a></li>
+        }
+    </div>
+</div>
