CATS-1381 has been done.

--- a/Web/Areas/EarlyWarning/Views/HRD/Edit.cshtml
+++ b/Web/Areas/EarlyWarning/Views/HRD/Edit.cshtml
@@ -30,7 +30,7 @@ Plans
         @Html.ValidationSummary(true)
         @Html.HiddenFor(m=>m.HRDID)
         @Html.HiddenFor(m=>m.PlanID)
-        @Html.HiddenFor(m=>m.Status)
+        @*@Html.HiddenFor(m=>m.Status)*@
             <div class="box-body row">
                
 
